--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -113,16 +113,20 @@ In many cases, declaring just the background and foreground color is enough. Spr
 
 ## Form
 
-### field-focus
+### focus-ring
 
-The `field-focus()` is a small internal helper mixin to set up the focus state of the form fields. We call it on the `.form-control` and `.form-check` classes.
+The `focus-ring()` is a small internal helper mixin to set up the focus state of the form fields, buttons (or anything). We call it on the `.form-control`, `.form-check`, `.form-switch`, `.form-range`, and button variants. For these calls, it works with global, related variables.
 
 #### Argument(s)
 
-| Name                         | Default Value            | Description                                 |
-|------------------------------|--------------------------|---------------------------------------------|
-| `$border`                    |                          | The color value of the border.              |
-| `$box-shadow`                |                          | The color value of the box shadow.          |
+| Name               | Default Value            | Description                                                   |
+|--------------  ----|--------------------------|---------------------------------------------------------------|
+| `$type`            | `box-shadow`             | The type of the focus ring: `outline` or `box-shadow`.        |
+| `$border-color`    | `null`                   | The color value of the border. It is needed mostly on inputs. |
+| `$ring-color`      |                          | The color of the focus ring.                                  |
+| `$box-shadow-type` |                          | Where should it place the box-shadow: `outside` or `inside`.  |
+| `$ring-width`      |                          | The width of the focus ring.                                  |
+| `$ring-offset`     |                          | The offset of the focus ring if the type is `outline`.        |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/mixin/_form.scss#L6)
 
@@ -130,9 +134,13 @@ The `field-focus()` is a small internal helper mixin to set up the focus state o
 
 ```scss
 .form-control:focus {
-  @include spruce.field-focus(
-    spruce.color(border-focus, form),
-    spruce.color(shadow-focus, form)
+  @include spruce.focus-ring(
+    $type: $form-control-focus-ring-type,
+    $border-color: spruce.color(border-focus, form),
+    $ring-color: spruce.color(ring-focus, form),
+    $box-shadow-type: $form-control-focus-ring-box-shadow-type,
+    $ring-width: $form-control-focus-ring-width,
+    $ring-offset: $form-control-focus-ring-offset
   );
 }
 ```
