Update to Spruce CSS v1.1.0

--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -369,8 +369,8 @@ Using the`$form-check-vertical-alignment` variable, you can control the checkbox
         <input class="form-check__control" type="checkbox" id="indeterminate" value="long-1" name="checkbox-long"/>
         <span class="form-label form-check__label">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent sit amet sapien libero. Aenean tristique sed ligula nec tempor. In turpis nisi, rhoncus at urna sed, imperdiet imperdiet orci.</span>
       </label>
-      <label class="form-check">
-        <input class="form-check__control form-check--vertical-start" type="checkbox" value="long-2" name="checkbox-long"/>
+      <label class="form-check form-check--vertical-start">
+        <input class="form-check__control" type="checkbox" value="long-2" name="checkbox-long"/>
         <span class="form-label form-check__label">Pellentesque lectus risus, ornare a gravida in, egestas euismod urna. Nullam rhoncus nisi sit amet quam accumsan, blandit tempor sem tristique. Mauris tempor quam sagittis tristique facilisis. Donec aliquet ac nisi eget facilisis.</span>
       </label>
     </div>
