Modify variable tables

--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -338,7 +338,7 @@ We use the formula for `$line-height-heding` from [Jesús Ricarte](https://kitty
 
 [View on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/config/_typography.scss#L33)
 
-<table class="table table--striped table--clear-border table--sm">
+<table class="table table--striped table--clear-border table--sm table--rounded table--font-size-reset">
   <thead>
     <tr>
       <th>Name</th>
@@ -582,7 +582,7 @@ $container-width: 84rem;
 
 ## Transition and Animation
 
-<table class="table table--striped table--sm table--font-size-reset">
+<table class="table table--striped table--clear-border table--sm table--rounded table--font-size-reset">
   <thead>
     <tr>
       <th>Name</th>
@@ -631,7 +631,7 @@ We store the breakpoints in the `$breakpoints` map, which we use in the <code><a
 
 [View on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/config/_breakpoint.scss)
 
-<table class="table table--striped table--sm table--font-size-reset">
+<table class="table table--striped table--clear-border table--sm table--rounded table--font-size-reset">
   <thead>
     <tr>
       <th>Name</th>
@@ -685,7 +685,7 @@ To learn more about the print option, [please visit the related page](/docs/gett
 
 [View on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/config/_print.scss)
 
-<table class="table table--striped table--sm table--font-size-reset">
+<table class="table table--striped table--clear-border table--sm table--rounded table--font-size-reset">
   <thead>
     <tr>
       <th>Name</th>
