Start with how-to articles

--- a/src/blog/how-to-choose-a-css-framework.mdx
+++ b/src/blog/how-to-choose-a-css-framework.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'How to Choose a CSS Framework'
 date: 2022-03-17
-featuredImage: ../images/blog/how-to-choose-a-css-framework.png
+featuredImage: '../images/blog/how-to-choose-a-css-framework.png'
 alt: 'An illustration with a hand holding a lightbulb.'
 published: true
 tags: ['css']
