--- a/src/blog/the-different-types-of-css-frameworks.mdx
+++ b/src/blog/the-different-types-of-css-frameworks.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Different Types of CSS Frameworks'
 date: 2022-07-08
-featuredImage: ../images/blog/the-different-types-of-css-frameworks.png
+featuredImage: '../images/blog/the-different-types-of-css-frameworks.png'
 alt: 'Categorizing CSS frameworks are sometimes more straightforward, sometimes more complex. Usually, we can put them in a group based on their philosophies.'
 published: true
 tags: ['css']
