--- a/src/blog/the-simplest-sass-compile-setup.mdx
+++ b/src/blog/the-simplest-sass-compile-setup.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Simplest Sass Compile Setup'
 date: 2021-09-03
-featuredImage: ../images/blog/the-simplest-sass-compile-setup.png
+featuredImage: '../images/blog/the-simplest-sass-compile-setup.png'
 alt: 'Abstract geometric illustration.'
 published: true
 tags: ['sass']
