--- a/src/blog/why-use-sass.mdx
+++ b/src/blog/why-use-sass.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Why Use Sass?'
 date: 2022-06-25
-featuredImage: ../images/blog/why-use-sass.png
+featuredImage: '../images/blog/why-use-sass.png'
 alt: 'Sass is the most popular CSS preprocessor. It is a great tool to manage your stylesheets differently and (maybe) better.'
 published: true
 tags: ['sass']
