--- a/src/blog/writing-better-css.mdx
+++ b/src/blog/writing-better-css.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Writing Better CSS'
 date: 2022-05-02
-featuredImage: ../images/blog/writing-better-css.png
+featuredImage: '../images/blog/writing-better-css.png'
 alt: 'An illustration about a woman who working on her computer.'
 published: true
 tags: ['css']
