--- a/src/blog/how-to-configure-spruce-css-in-your-project.mdx
+++ b/src/blog/how-to-configure-spruce-css-in-your-project.mdx
@@ -1,11 +1,61 @@
 ---
-title: 'How to Setup a Dark Theme in Spruce CSS'
-date: 2022-11-01
-featuredImage: '../images/blog/how-to-02.png'
+title: 'How to Configure Spruce CSS in Your Project'
+date: 2022-10-07
+featuredImage: '../images/blog/how-to-01.png'
 alt: ''
 published: true
 tags: ['how-to']
 ---
 
-<p class="lead">lead</p>
+<p class="lead">Including Spruce CSS in your project is an easy job. First, you must install it (the best with npm) and set up the <a href="https://sprucecss.com/blog/the-simplest-sass-compile-setup">Sass compile</a>. Second, you need a quick config setting and are good to go.</p>
+
+A config setting is needed to set your custom values and generate Spruce’s styles.
+
+We can utilize Sass’s newer [index file feature](https://sass-lang.com/documentation/at-rules/use#index-files). Create a **config** folder inside your **scss** folder.
+
+We need an **_index.scss**, a **_config.scss**, and a **_styles.scss** file in this folder. Inside the **_index.scss** file, we forward the others to our main entry point (that we compile into a single CSS file) **main.scss**, which is in the root of the `scss` folder.
+
+```scss
+.
+└── scss/
+    ├── config/
+    │   ├── _index.scss
+    │   ├── _config.scss
+    │   └── _styles.scss
+    └── main.scss
+```
+
+<Notification type="info">
+You can see this file structure in action at our <a href="https://github.com/conedevelopment/sprucecss-starter-kit">Spruce CSS Starter Kit</a>.</Notification>
+
+## _config.scss
+
+Inside the** _config.scss** file, we set our Spruce CSS customizations as you see under the [settings](/docs/customization/settings) and [variabled](/docs/sass/variables).
+
+```scss
+@use 'sprucecss/scss/spruce' with (
+  $colors: (
+    card: (
+      background: hsl(0, 0%, 100%),
+      border: hsl(220 32% 87%)
+    )
+  )
+);
+```
+
+## _styles.scss
+
+Inside the **_styles.scss** file, we set the [generators](/docs/elements/generators). Usually, this means the `generate-content` and `generate-form`, but we can do it any way we want.
+
+```scss
+@use 'sprucecss/scss/spruce';
+
+@include spruce.generate-content;
+@include spruce.generate-form;
+```
+
+## The Advantages of This Structure
+You separated every config-related code inside one folder, which is always nice.
+For example, you can easily extend this structure in the future if you need another theme, like a dark one.
+You can load the config in multiple files, which are usually handy (or you need just the **_config.scss**).
 
