--- a/src/blog/how-to-setup-a-dark-theme-in-spruce-css.mdx
+++ b/src/blog/how-to-setup-a-dark-theme-in-spruce-css.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'How to Configure Spruce CSS in Your Project'
-date: 2022-10-07
-featuredImage: '../images/blog/how-to-01.png'
+title: 'How to Setup a Dark Theme in Spruce CSS'
+date: 2022-11-13
+featuredImage: '../images/blog/how-to-02.png'
 alt: ''
 published: true
 tags: ['how-to']
