--- a/src/blog/how-to-configure-spruce-css-in-your-project.mdx
+++ b/src/blog/how-to-configure-spruce-css-in-your-project.mdx
@@ -28,7 +28,7 @@ We need an **_index.scss**, a **_config.scss**, and a **_styles.scss** file in t
 <Notification type="info">
 You can see this file structure in action at our <a href="https://github.com/conedevelopment/sprucecss-starter-kit">Spruce CSS Starter Kit</a>.</Notification>
 
-## __index.scss
+## _index.scss
 
 In this file, we just forward all of the config files.
 
