--- a/src/blog/how-to-reduce-spruce-css-size.mdx
+++ b/src/blog/how-to-reduce-spruce-css-size.mdx
@@ -3,7 +3,7 @@ title: 'How to Reduce Spruce CSS Size'
 date: 2022-11-13
 featuredImage: '../images/blog/how-to-03.png'
 alt: ''
-published: true
+published: false
 tags: ['how-to']
 ---
 
