--- a/src/blog/how-to-reduce-spruce-css-size.mdx
+++ b/src/blog/how-to-reduce-spruce-css-size.mdx
@@ -3,7 +3,7 @@ title: 'How to Reduce Spruce CSS Size'
 date: 2022-11-14
 featuredImage: '../images/blog/how-to-03.png'
 alt: ''
-published: true
+published: false
 tags: ['how-to']
 ---
 
@@ -34,4 +34,3 @@ If you only need one type of button and nothing more from the forms, you can use
 ```
 
 <Notification type="info">Please visit our <a href="/blog/how-to-configure-spruce-css-in-your-project">first how-to article</a> to learn more about how you should set up your config files.</Notification>
-
