--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -10,7 +10,7 @@ Minimalism means that it contains only the bare minimum needed for a complex sys
 
 Although it seems small, it isn’t. Spruce CSS uses Sass with many variables, mixins, and functions to ease the work and use its code on demand.
 
-We call it framework because we didn’t know how to call it. It is clearly a framework of some kind but sure a smaller one.
+We call it a framework because we didn’t know how to call it. It is clearly a framework of some kind but undoubtedly a smaller one.
 
 ## Our Goals with Spruce CSS
 
@@ -20,17 +20,17 @@ We call it framework because we didn’t know how to call it. It is clearly a fr
 - **Include just a few components.** For UI, we plan to do a separate project named Spruce UI. Our main goal is to make a cool pattern and template library, but it is a long road.
 - Follow semantic and accessibility best practices when possible; this doesn’t mean much in the core library but will be under the UI.
 
-<Notification type="info" icon={true}>Spruce UI will be a separate sister project of Spruce CSS, where you will find pre-built components. We plan to start to work on it at the end of this year (2022).</Notification>
+<Notification type="info" icon={true}><a href="/ui/getting-started/introduction">Spruce UI</a> is a separate sister project of Spruce CSS, where you will find pre-built components.</Notification>
 
 ## Some Thoughts
 
-- We don’t want to compete or compered with other CSS frameworks. We think almost all of them are great - we learn(t) a lot from them. Besides, they have weaknesses and greatnesses, too, like Spruce CSS.
+- We don’t want to compete or be compared with other CSS frameworks. We think almost all of them are great - we learn(t) a lot from them. Besides, they have weaknesses and greatnesses, too, like Spruce CSS.
 - Although it has some design opinions, it is not something to help you design (User Interfaces). The goal is to give you the correct patterns and a small system to help you create manageable projects in the long run; the UI is your job.
 - **Spruce CSS is just a tool. It can help you, and it will, but alone it can’t make your code better.** As with any framework or tool, your knowledge is what truly matters.
 
 ## Who is Spruce For?
 
-Choosing a CSS library is not an easy task. Let us help you with why you should select Spruce:
+Choosing a CSS library is a challenging task. Let us help you with why you should select Spruce:
 
 - Spruce is a good choice if you prefer writing CSS instead of HTML. It uses just a few classic utility classes.
 - It is a relatively small framework with a smaller learning curve. The codebase is small but can add more to any project with the available mixins and functions.
@@ -40,9 +40,9 @@ Choosing a CSS library is not an easy task. Let us help you with why you should 
 
 ## Why Make Another CSS Framework?
 
-As you may know, there are many CSS frameworks (hundreds of them, and a lot of them are not maintained today). Everybody can choose one that suits their work style or project requirements. So why make another one? It is certainly not because we can do it better but because **we want to do it our way**. We want to be in control and make decisions.
+As you may know, there are many CSS frameworks (hundreds of them, and a many are not maintained today). Everybody can choose one that suits their work style or project requirements. So why make another one? It is certainly not because we can do it better but because **we want to do it our way**. We want to be in control and make decisions.
 
-We are sure everybody uses a CSS system; it can be a complete framework or a set of custom utilities. Everyone uses some subset for the new projects as we do. But managing it is something that will be a burden after a time. So why not outsource it, make it better, create a package, and document it well?
+We are sure everybody uses a CSS system; it can be a complete framework or a set of custom utilities. Everyone uses some subset for new projects, as we do. But managing it is something that will be a burden over time. So why not outsource it, make it better, create a package, and document it well?
 
 ## It Is Opinionated
 
@@ -50,7 +50,7 @@ Each system is opinionated but on a different level; this is valid for Spruce to
 
 ## We Left the Grid Out
 
-One controversial decision we made with Spruce is to leave a classical grid system out. Because of the late CSS layout model developments like Flexbox and Grid, we think it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it the modern way.
+We made a controversial decision with Spruce to leave a classical grid system out. Because of the late CSS layout model developments like Flexbox and Grid, we think it can be eliminated; this doesn’t mean that we won’t show you how to make layouts with ease, but we try to make it the modern way.
 
 ## Color Purple
 
