--- a/src/docs/getting-started/accessibility.mdx
+++ b/src/docs/getting-started/accessibility.mdx
@@ -4,13 +4,15 @@ order: 5
 github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/accessibility.mdx'
 ---
 
-<p class="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce CSS. Our goal is to help you develop a little more accessible web-based projects through our code and the documentation, where we will try to show you small, related tips and guidance where necessary.</p>
+<p class="lead">Inclusivity and accessibility (A11Y) are some of the main concerns of Spruce CSS. Our goal is to help you develop more accessible web-based projects through our code and documentation, where we will try to show you small, related tips and guidance where necessary.</p>
 
-Building something more inclusive is a long process. We learn on the way, too, so this is especially a work in progress.
+Building something more inclusive is a long process. We learn on the way, too, so this always will be a work in progress.
+
+<Notification type="info">We will do our best to test our code with <a href="https://www.nvaccess.org/download/">NVDA</a> (under Windows 10). Testing is an area where help is much appreciated. <a href="https://github.com/conedevelopment/sprucecss/issues">Please open an issue</a> if you have any input related to this topic. Thank you!</Notification>
 
 ## WCAG 2.1
 
-Our primary reference is the [Web Content Accessibility Guidelines 2.1](https://www.w3.org/WAI/WCAG21/quickref/) level AA. By alone, as a CSS framework, Spruce can’t tackle too much of this reference, but we will follow this standard in Spruce UI too, where it will have more significance.
+Our primary reference is the [Web Content Accessibility Guidelines 2.1](https://www.w3.org/WAI/WCAG21/quickref/) level AA. As a CSS framework, Spruce can’t tackle too much of this reference, but it is more critical at [Spruce UI](/ui/getting-started/introduction), where you can grab standalone components.
 
 ## Integrated Inclusivity
 
