Add $table-stripe to documentation

--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -61,6 +61,8 @@ Use the `table` class on an HTML `<table>` element to use the default styling.
 
 Use the `table--striped` class on a `<table>` to display a zebra-striped styling. To add hover style to the table rows, use the `table--hover` class.
 
+You control the stripe pattern with the <code><a href="/docs/sass/variables#tables">$table-stripe</a></code> variable (odd, even).
+
 <Preview>
   <table className="table--striped table--hover">
     <thead>
