--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -572,6 +572,8 @@ $table-caption-font-size: null;
 $table-caption-font-style: null;
 $table-caption-font-weight: null;
 
+$table-stripe: odd;
+
 ```
 
 ## Layout
