Add new variable to docs

--- a/src/docs/customization/themes.mdx
+++ b/src/docs/customization/themes.mdx
@@ -68,10 +68,7 @@ $colors: (
     primary-foreground: $color-white,
     secondary-background: $color-secondary,
     secondary-background-hover: color.adjust($color-secondary, $lightness: 5%),
-    secondary-foreground: $color-white,
-    install-background: hsl(207 39% 17%),
-    install-background-hover: hsl(207 23% 26%),
-    install-foreground: hsl(0 0% 100%)
+    secondary-foreground: $color-white
   ),
   form: (
     background: color.scale($color-black, $lightness: 5%),
